--- a/styles/animations.css
+++ b/styles/animations.css
@@ -12,3 +12,91 @@
 
 Кроме этого, не меняйте HTML переключателя тем. Его разметка также гарантирует работу своего скрипта.
 */
+
+.core {
+    fill: transparent;
+    transition: fill 0.3s linear 0.03s;
+}
+
+.main-body {
+    fill: transparent;
+    transition: fill 0.3s linear;
+}
+
+
+.like-icon:hover .core {
+    fill: var(--heart-contour-color);
+    transition: fill 0.3s linear 0.05s;
+}
+
+.like-icon:hover .main-body {
+    fill: var(--heart-contour-color);
+    transition: fill 0.5s linear;
+}
+
+.like-icon:active .core {
+    fill: var(--heart-color);
+    transition: fill 0.3s linear;
+}
+
+.like-icon:active .main-body {
+    fill: var(--heart-color);
+    transition: fill 0.3s linear 0.05s;
+}
+
+
+.like-icon.is-liked .contour {
+    fill: var(--heart-color);
+    transition: fill 0.3s linear 0.06s;
+}
+
+.like-icon.is-liked .main-body {
+    fill: var(--heart-color);
+    transition: fill 0.3s linear 0.05s;
+}
+
+.like-icon.is-liked .core {
+    fill: var(--heart-color);
+    transition: fill 0.3s linear;
+}
+
+@keyframes heart-scale {
+    0% {
+        scale: 1;
+
+    }
+
+    100% {
+        scale: 1.15;
+    }
+}
+
+@keyframes heart-sparks {
+    0% {
+        fill: none;
+    }
+
+    100% {
+        fill: var(--heart-color);
+    }
+}
+
+@keyframes select-theme {
+    0% {
+        left: -13px;
+    }
+    
+    100% {
+        left: -9px;
+    }
+}
+
+.is-liked .heart {
+    animation: heart-scale .3s ease-in .1s;
+    transform-origin: center;
+}
+
+.is-liked .sparks {
+    animation: heart-sparks .3s ease-in .3s;
+    transform-origin: center;
+}
