--- a/styles/style.css
+++ b/styles/style.css
@@ -17,4 +17,345 @@
 .page {
   min-inline-size: 320px;
   min-block-size: 100dvb;
+  font-variation-settings: "wght" var(--text-font-weight);
+  background-image: var(--background-image);
+  background-size: cover;
+  background-color: var(--background-color);
+  background-attachment: fixed;
+  color: var(--accent-color);
+}
+
+.header {
+  font-family: var(--accent-font);
+  margin-block-end: 100px;
+}
+
+.header__block {
+  width: clamp(23.188rem, 11.451rem + 50.077vi, 43.5rem);
+  height: clamp(20.188rem, 18.707rem + 6.317vi, 22.75rem);
+  margin: 0 auto;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding-block-start: clamp(7.5rem, 6.3462rem + 4.9231cqi, 8.5rem);
+  padding-block-end: 25px;
+  border: 2px solid var(--accent-color);
+  background-color: var(--background-color);
+  margin-block-start: 100px;
+}
+
+.header__title {
+  font-size: clamp(3.063rem, 2.462rem + 2.56vi, 4.063rem);
+  margin-block-end: 20px;
+}
+
+.header__subtitle {
+  font-size: clamp(0.875rem, 0.55rem + 1.387vi, 1.438rem);
+  line-height: clamp(0.875rem, 0.55rem + 1.387vi, 1.438rem);
+  text-transform: uppercase;
+  margin-block-end: 23px;
+}
+
+.header__theme-menu {
+  position: relative;
+}
+
+.theme-menu__list {
+  display: flex;
+  flex-direction: column;
+  gap: 12px;
+  font-size: 14px;
+  margin-inline-start: 20px;
+}
+
+.theme-menu__button {
+  border: none;
+  background: none;
+  text-transform: uppercase;
+  position: relative;
+}
+
+.theme-menu__button::after {
+  content: "";
+  position: absolute;
+  inset-block: 15px;
+  left: 0;
+  background-color: var(--accent-color);
+  block-size: 2px;
+  inline-size: 100%;
+  transform: scaleX(0);
+  transition: transform 0.3s ease;
+  transform-origin: left;
+}
+
+.theme-menu__button:focus-visible:after {
+  transform: scaleX(1);
+}
+
+.theme-menu__button:focus {
+  outline: none;
+  opacity: 0.6;
+}
+
+.theme-menu__button:disabled {
+  opacity: 60%;
+  pointer-events: none;
+  transition: all 0.3s;
+}
+
+.theme-menu__button:disabled::before {
+  content: "▶";
+  position: absolute;
+  left: -13px;
+  animation-name: select-theme;
+  animation-duration: 0.5s;
+  animation-timing-function: ease-in-out;
+  animation-direction: alternate;
+  animation-iteration-count: infinite;
+}
+
+/* ------------------main----------------- */
+
+.main {
+  font-family: var(--main-font);
+}
+
+.section {
+  width: clamp(23.438rem, 11.845rem + 49.461vi, 43.5rem);
+  background-color: var(--background-color);
+  border: 2px solid var(--accent-color);
+  margin: 0 auto 54px;
+}
+
+.card__title {
+  margin-inline-start: 10px;
+  margin-block-end: 4px;
+  padding-block-start: 6px;
+  padding-inline-end: 20px;
+  font-weight: var(--title-font-weight);
+  font-size: 18px;
+}
+
+.card__image-wrapper {
+  position: relative;
+}
+
+.card__image-label {
+  font-family: var(--accent-font);
+  position: absolute;
+  top: 25px;
+  right: 11px;
+  mix-blend-mode: hard-light;
+  text-shadow: 1px 1px 0 var(--label-stroke-color);
+  color: #000;
+  font-size: 14px;
+  opacity: 50%;
+  z-index: 2;
+}
+
+@supports (-webkit-text-stroke: 1px #fff) {
+  .card__image-label {
+    -webkit-text-stroke-width: 1px;
+    -webkit-text-stroke-color: var(--label-stroke-color);
+  }
+}
+
+.card__image {
+  width: 100%;
+  height: clamp(23.438rem, 11.845rem + 49.461vi, 43.5rem);
+  /* ВРЕМЕННОЕ РЕШЕНИЕ */
+}
+
+.card__text-block {
+  margin: 22px 29px 26px 25px;
+  display: flex;
+  flex-direction: column;
+  gap: 27px;
+  font-weight: var(--text-font-weight);
+  font-size: 18px;
+}
+
+.card__button-group {
+  display: flex;
+  justify-content: flex-end;
+  margin-inline-end: 25px;
+  margin-block-end: 25px;
+  gap: 6px;
+}
+
+.card__icon-button {
+  background-color: transparent;
+  border: none;
+  cursor: pointer;
+}
+
+.like-icon {
+  display: block;
+}
+
+.loke-icon:hover {
+  
+}
+
+.card__icon-button:focus {
+  outline: none;
+}
+
+.card__icon-button:focus-visible  .icon-like{
+  outline: 2px solid var(--accent-color);
+  outline-offset: 5px;
+}
+
+.card__like-button {
+  border: 2px solid var(--accent-color);
+  background-color: transparent;
+  width: 130px;
+  height: 38px;
+  font-size: 14px;
+  cursor: pointer;
+  position: relative;
+}
+
+.card__like-button:before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  transform: scaleX(0);
+  width: 100%;
+  height: 100%;
+  background-color: var(--accent-color);
+  transform-origin: left;
+}
+
+.card__like-button:hover:before {
+  transform: scaleX(1);
+  transition: transform .5s ease-in-out;
+}
+
+.card__like-button:focus {
+  outline: none;
+  box-shadow: 2px 2px 0 var(--accent-color);
+  transition: all 0.3s;
+}
+
+.button__text {
+  font-family: var(--accent-font);
+  mix-blend-mode: difference;
+  color: var(--button-text-color);
+  transition: all .3s ease 
+}
+
+/* --------------------------------footer----------------------------------- */
+
+.footer {
+  display: flex;
+  justify-content: center;
+}
+
+.footer__button {
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  align-items: center;
+  width: clamp(19.125rem, 18.078rem + 4.468vi, 20.938rem);
+  height: clamp(5rem, 6.047rem + -4.468vi, 3.188rem);
+  background-color: var(--background-color);
+  border: 2px solid var(--accent-color);
+  cursor: pointer;
+  position: relative;
+}
+
+.footer__button-subtitle {
+  font-family: var(--accent-font);
+  font-size: 14px;
+  mix-blend-mode: difference;
+  color: var(--button-text-color);
+}
+
+.floppy_svg {
+
+}
+
+.footer__button:before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  transform: scaleX(0);
+  width: 100%;
+  height: 100%;
+  background-color: var(--accent-color);
+  transform-origin: left;
+}
+
+.footer__button:hover:before {
+  transform: scaleX(1);
+  transition: transform .5s ease-in-out;
+}
+
+.footer__button:focus {
+  outline: none;
+  box-shadow: 2px 2px 0 var(--accent-color);
+  transition: all 0.3s;
+}
+
+.dialog {
+  background-color: var(--background-color);
+  border: 2px solid var(--accent-color);
+  width: clamp(21.313rem, 20.735rem + 2.465vi, 22.313rem);
+  height: 195px;
+  font-family: var(--accent-font);
+}
+
+.dialog__wrapper {
+  display: flex;
+}
+
+.dialog__text {
+  color: var(--accent-color);
+  text-transform: uppercase;
+  ;
+}
+
+.dialog__button {
+  background-color: transparent;
+  color: var(--accent-color);
+  border: 2px solid var(--accent-color);
+  width: clamp(16.063rem, 14.762rem + 5.547vi, 18.313rem);
+  height: 38px;
+}
+
+.dialog::backdrop {
+  background-color: rgb(0 0 0 / 0.75);
+} 
+
+/* ---------Фильтры изображений---------- */
+
+.image_night {
+  filter: saturate(0.2);
+}
+
+.image__neon {
+  filter: hue-rotate(-2deg) saturate(4) brightness(1) contrast(1.2);
+}
+
+.image__pink-flter {
+  filter: hue-rotate(20deg) brightness(1.2) saturate(1);
+}
+
+.image__toxic {
+  filter: invert(1) brightness(0.8);
+}
+
+.image__noir {
+  filter: sepia(0.8) saturate(.5);
+}
+
+.image__blur {
+  filter: blur(15px);
+}
+
+.image__old {
+  filter: hue-rotate(95deg) contrast(0.4) saturate(2) blur(1.5px);
 }
