--- a/styles/themes.css
+++ b/styles/themes.css
@@ -4,3 +4,34 @@
 ✦ theme-light — класс светлой темы
 ✦ не забудьте описать стили для изменения темы через медизапрос пользовательских предпочтений
 */
+:root.theme-light {
+    --background-image: 
+        repeating-linear-gradient(to right, #d3d3d3 0px 2px, transparent 2px 4px), 
+        repeating-linear-gradient(to bottom, #d3d3d3 0px 2px, transparent 2px 4px), 
+        linear-gradient(to bottom, #e7e7e7 0.01%, #1a1a1a);
+    --background-color: #fff;
+    --accent-color: #000;
+    --title-font-weight: 700;
+    --text-font-weight: 400;
+    --label-stroke-color: var(--background-color);
+    --heart-contour-color: var(--accent-color);
+}
+
+:root.theme-dark {
+    --background-image: 
+        repeating-linear-gradient(to right, #000 0px 2px, transparent 2px 4px), 
+        repeating-linear-gradient(to bottom, #000 0px 2px, transparent 2px 4px), 
+        linear-gradient(to bottom, #007f0c, #004306);
+    --background-color: #000;
+    --accent-color: #00CC14;
+    --title-font-weight: 785;
+    --text-font-weight: 465;
+    --label-stroke-color: #00CC14;
+    --button-text-color: #00CC14;
+    --heart-contour-color:var(--accent-color);
+}
+
+
+@media (prefers-color-scheme: dark) {
+    
+}
