--- a/styles/variables.css
+++ b/styles/variables.css
@@ -1,1 +1,18 @@
 /* В этом файле будут храниться все значения переменных в исходном состоянии, а так же их изменения в зависимости от ширины устройства */
+
+:root {
+    --accent-font: "PressStart2P", "Arial", sans-serif;
+    --main-font: "Inter-Variable", "Arial", sans-serif;
+    --title-font-weight: 700;
+    --text-font-weight: 400;
+    --background-image: 
+        repeating-linear-gradient(to right, #d3d3d3 0px 2px, transparent 2px 4px), 
+        repeating-linear-gradient(to bottom, #d3d3d3 0px 2px, transparent 2px 4px), 
+        linear-gradient(to bottom, #e7e7e7 0.01%, #1a1a1a);
+    --background-color: #fff;
+    --accent-color: #000;
+    --label-stroke-color: var(--background-color);
+    --button-text-color: var(--background-color);
+    --heart-contour-color: var(--accent-color);
+    --heart-color: #FF0000;
+}
