--- a/styles/themes.css
+++ b/styles/themes.css
@@ -14,6 +14,7 @@
     --title-font-weight: 700;
     --text-font-weight: 400;
     --label-stroke-color: var(--background-color);
+    --button-text-color: var(--background-color);
     --heart-contour-color: var(--accent-color);
 }
 
@@ -33,5 +34,17 @@
 
 
 @media (prefers-color-scheme: dark) {
-    
+    :root {
+    --background-image: 
+        repeating-linear-gradient(to right, #000 0px 2px, transparent 2px 4px), 
+        repeating-linear-gradient(to bottom, #000 0px 2px, transparent 2px 4px), 
+        linear-gradient(to bottom, #007f0c, #004306);
+    --background-color: #000;
+    --accent-color: #00CC14;
+    --title-font-weight: 785;
+    --text-font-weight: 465;
+    --label-stroke-color: #00CC14;
+    /* --button-text-color: #00CC14; */
+    --heart-contour-color:var(--accent-color);
+    }
 }
