--- a/styles/style.css
+++ b/styles/style.css
@@ -23,6 +23,7 @@
   background-color: var(--background-color);
   background-attachment: fixed;
   color: var(--accent-color);
+  overflow: auto;
 }
 
 .header {
@@ -32,7 +33,6 @@
 
 .header__block {
   width: clamp(23.188rem, 11.451rem + 50.077vi, 43.5rem);
-  height: clamp(20.188rem, 18.707rem + 6.317vi, 22.75rem);
   margin: 0 auto;
   display: flex;
   flex-direction: column;
@@ -47,6 +47,7 @@
 .header__title {
   font-size: clamp(3.063rem, 2.462rem + 2.56vi, 4.063rem);
   margin-block-end: 20px;
+  text-decoration: none;
 }
 
 .header__subtitle {
@@ -73,6 +74,12 @@
   background: none;
   text-transform: uppercase;
   position: relative;
+  cursor: pointer;
+}
+
+.theme-menu__button:hover {
+  opacity: 0.6;
+  transition: opacity .3s ease;
 }
 
 .theme-menu__button::after {
@@ -120,7 +127,7 @@
   font-family: var(--main-font);
 }
 
-.section {
+.card {
   width: clamp(23.438rem, 11.845rem + 49.461vi, 43.5rem);
   background-color: var(--background-color);
   border: 2px solid var(--accent-color);
@@ -132,12 +139,14 @@
   margin-block-end: 4px;
   padding-block-start: 6px;
   padding-inline-end: 20px;
-  font-weight: var(--title-font-weight);
+  font-variation-settings: "wght" var(--title-font-weight);
   font-size: 18px;
 }
 
 .card__image-wrapper {
   position: relative;
+  border-top: 2px solid var(--accent-color);
+  border-bottom: 2px solid var(--accent-color);
 }
 
 .card__image-label {
@@ -163,7 +172,7 @@
 .card__image {
   width: 100%;
   height: clamp(23.438rem, 11.845rem + 49.461vi, 43.5rem);
-  /* ВРЕМЕННОЕ РЕШЕНИЕ */
+  display: inherit;
 }
 
 .card__text-block {
@@ -173,6 +182,10 @@
   gap: 27px;
   font-weight: var(--text-font-weight);
   font-size: 18px;
+}
+
+.card__text {
+  line-height: 21px;
 }
 
 .card__button-group {
@@ -197,42 +210,15 @@
   outline: none;
 }
 
-.card__icon-button:focus-visible  .icon-like {
+.card__icon-button:focus-visible  .like-icon {
   outline: 2px solid var(--accent-color);
-  outline-offset: 5px;
 }
 
 .card__like-button {
-  border: 2px solid var(--accent-color);
   background-color: transparent;
   width: 130px;
   height: 38px;
   font-size: 14px;
-  cursor: pointer;
-  position: relative;
-}
-
-.card__like-button:before {
-  content: "";
-  position: absolute;
-  top: 0;
-  left: 0;
-  transform: scaleX(0);
-  width: 100%;
-  height: 100%;
-  background-color: var(--accent-color);
-  transform-origin: left;
-}
-
-.card__like-button:hover:before {
-  transform: scaleX(1);
-  transition: transform .5s ease-in-out;
-}
-
-.card__like-button:focus {
-  outline: none;
-  box-shadow: 2px 2px 0 var(--accent-color);
-  transition: box-shadow 0.3s;
 }
 
 .button__text {
@@ -244,78 +230,62 @@
 
 /* --------------------------------footer----------------------------------- */
 
-.footer {
+.save__wrapper {
   display: flex;
   justify-content: center;
+  inline-size: 335px;
+  block-size: 51px;
+  margin: 0 auto 103px;
 }
 
-.footer__button {
+.save__button {
   display: flex;
-  justify-content: center;
-  flex-direction: column;
+  flex-direction: row;
   align-items: center;
-  width: clamp(19.125rem, 18.078rem + 4.468vi, 20.938rem);
-  height: clamp(5rem, 6.047rem + -4.468vi, 3.188rem);
+  justify-content: center;
+  gap: 8px;
   background-color: var(--background-color);
-  border: 2px solid var(--accent-color);
-  cursor: pointer;
-  position: relative;
 }
 
-.footer__button-subtitle {
+.save__button-subtitle {
   font-family: var(--accent-font);
   font-size: 14px;
   mix-blend-mode: difference;
   color: var(--button-text-color);
 }
 
-.footer__button:before {
-  content: "";
-  position: absolute;
-  top: 0;
-  left: 0;
-  transform: scaleX(0);
-  width: 100%;
-  height: 100%;
-  background-color: var(--accent-color);
-  transform-origin: left;
-}
-
-.footer__button:hover:before {
-  transform: scaleX(1);
-  transition: transform .5s ease-in-out;
-}
-
-.footer__button:focus {
-  outline: none;
-  box-shadow: 2px 2px 0 var(--accent-color);
-  transition: box-shadow 0.3s;
-}
-
 .dialog {
   background-color: var(--background-color);
   border: 2px solid var(--accent-color);
   width: clamp(21.313rem, 20.735rem + 2.465vi, 22.313rem);
-  height: 195px;
   font-family: var(--accent-font);
+  padding: 31px 32px 30px 30px;
 }
 
 .dialog__wrapper {
   display: flex;
+  gap: 20px;
+  margin-block-end: 27px;
 }
 
 .dialog__text {
   color: var(--accent-color);
   text-transform: uppercase;
-  ;
+  flex-shrink: 1;
+  font-size: 14px;
+  line-height: 21px;
 }
 
 .dialog__button {
   background-color: transparent;
   color: var(--accent-color);
-  border: 2px solid var(--accent-color);
   width: clamp(16.063rem, 14.762rem + 5.547vi, 18.313rem);
   height: 38px;
+}
+
+.dialog__ok-text {
+  mix-blend-mode: difference;
+  color: var(--background-color);
 }
 
 .dialog::backdrop {
@@ -350,4 +320,62 @@
 
 .image__old {
   filter: hue-rotate(95deg) contrast(0.4) saturate(2) blur(1.5px);
+}
+
+
+.button {
+  border: 2px solid var(--accent-color);
+  cursor: pointer;
+  position: relative;
+}
+
+.button:before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  transform: scaleX(0);
+  width: 100%;
+  height: 100%;
+  background-color: var(--accent-color);
+  transform-origin: left;
+}
+
+.button:hover:before {
+  transform: scaleX(1);
+  transition: transform .5s ease-in-out;
+}
+
+.button:focus {
+  outline: none;
+  box-shadow: 2px 2px 0 var(--accent-color);
+  transition: box-shadow 0.3s;
+}
+
+.floppy-svg {
+  mix-blend-mode: difference;
+  inline-size: 21px;
+  block-size: 21px;
+}
+
+.dialog__floppy-svg {
+  mix-blend-mode: difference;
+  align-self: center;
+  inline-size: 39px;
+  block-size: 39px;
+  flex-shrink: 0;
+}
+
+@media (width <= 375px) {
+  .save__button {
+    flex-direction: column;
+    gap: 10px;
+    inline-size: 306px;
+    block-size: 80px;
+  }
+
+  .floppy-svg {
+    inline-size: 28px;
+    block-size: 28px;
+  }
 }
