--- a/styles/style.css
+++ b/styles/style.css
@@ -233,8 +233,8 @@
 .save__wrapper {
   display: flex;
   justify-content: center;
-  inline-size: 335px;
-  block-size: 51px;
+  inline-size: 340px;
+  block-size: 55px;
   margin: 0 auto 103px;
 }
 
@@ -245,6 +245,7 @@
   justify-content: center;
   gap: 8px;
   background-color: var(--background-color);
+  padding: 0 20px;
 }
 
 .save__button-subtitle {
@@ -279,13 +280,8 @@
 .dialog__button {
   background-color: transparent;
   color: var(--accent-color);
-  width: clamp(16.063rem, 14.762rem + 5.547vi, 18.313rem);
+  width: 100%;
   height: 38px;
-}
-
-.dialog__ok-text {
-  mix-blend-mode: difference;
-  color: var(--background-color);
 }
 
 .dialog::backdrop {
